--- a/.github/workflow/test.yaml
+++ b/.github/workflow/test.yaml
@@ -20,4 +20,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Hello World
-        run: echo Hello, world!
+        run: echo Hello, world!!
