--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-export DATABASE_URL="postgres://postgres:password@localhost:5432/fb_clone_db"
+DB_USERNAME=postgres
+DB_PASSWORD=password
+DB_HOST=localhost
