--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "fb-clone",
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
-  "type": "commonjs",
   "devDependencies": {
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "0.3.22",
-    "pg": "^8.14.1"
+    "typeorm": "0.3.22"
   },
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "seed": "ts-node src/seed.ts",
+    "migrate": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts"
   }
 }
