--- a/.github/workflows/feature_branch.yaml
+++ b/.github/workflows/feature_branch.yaml
@@ -1,29 +1,14 @@
-name: Feature Branch
+name: Hello World on Pull Request
 
 on:
-  push:
+  pull_request:
     branches:
-      - "main"
+      - main
+
 jobs:
-  migrate:
+  say-hello:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build Docker image
-        run: |
-          docker build -t migrator .
-
-      - name: Run Docker image
-        run: |
-          docker run \
-            -e DB_USERNAME=postgres \
-            -e DB_PASSWORD=m9Knfxc4E3Ckdfd8 \
-            -e DB_HOST=fbcloneinfrastack-db1de0c8f27-fbnxwhj24utd.cydrblterhff.ap-southeast-2.rds.amazonaws.com \
-            -e DB_NAME=fbCloneDB \
-            migrator
+      - name: Print Hello World
+        run: echo "Hello, World!"
