--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "aws-cdk": "^2.1016.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
@@ -18,6 +19,7 @@
   "scripts": {
     "seed": "ts-node src/seed.ts",
     "migrate": "typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
+    "cdk": "cdk",
     "infra:diff": "cdk diff",
     "infra:deploy": "cdk deploy"
   }
