--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.817.0",
     "aws-cdk-lib": "^2.198.0",
     "constructs": "^10.4.2",
     "dotenv": "^16.5.0",
