--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cdk": "cdk",
     "infra:diff": "cdk diff -o infra/templates",
     "infra:deploy": "cdk deploy --all -o infra/templates",
+    "infra:destroy": "cdk destroy --all -o infra/templates",
     "db-live:start": "aws rds start-db-instance --db-instance-identifier fb-clone-db",
     "db-live:stop": "aws rds stop-db-instance --db-instance-identifier fb-clone-db"
   }
